<resources>
    <string name="app_name">Football2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Football</string>
    <string name="nav_header_subtitle">keosakartem@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_england">England</string>
    <string name="menu_germany">Germany</string>
    <string name="menu_spain">Spain</string>
    <string name="menu_france">France</string>
    <string name="menu_italy">Italy</string>
    <string name="result_btn">Result</string>
    <string name="p">P</string>
    <string name="g">G</string>
    <string name="l">L</string>
    <string name="d">D</string>
    <string name="w">W</string>
    <string name="form">Form</string>
    <string name="name">Name</string>
    <string name="number">№</string>
    <string name="team">Team</string>
    
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="standings_container">Standings</string>
    <string name="match_container">Match</string>
    <string name="choose_a_tour">Choose a tour</string>
    <string name="website_text">Website</string>
    <string name="stadium_text">Stadium</string>
    <string name="founded_text">Founded</string>
    <string name="squad_text">Squad</string>
    <string name="website_btn">Go to website</string>
</resources>