<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_england"
            android:icon="@drawable/england"
            android:title="@string/menu_england" />
        <item
            android:id="@+id/nav_germany"
            android:icon="@drawable/germany"
            android:title="@string/menu_germany" />
        <item
            android:id="@+id/nav_spain"
            android:icon="@drawable/spain"
            android:title="@string/menu_spain" />

        <item
            android:id="@+id/nav_france"
            android:icon="@drawable/france"
            android:title="@string/menu_france" />

        <item
            android:id="@+id/nav_italy"
            android:icon="@drawable/italy"
            android:title="@string/menu_italy" />
    </group>
</menu>