<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_england">

    <fragment
        android:id="@+id/nav_england"
        android:name="com.example.footbal2.fragments.EnglandFragment"
        android:label="@string/menu_england"
        tools:layout="@layout/fragment_england" />

    <fragment
        android:id="@+id/nav_germany"
        android:name="com.example.footbal2.fragments.GermanyFragment"
        android:label="@string/menu_germany"
        tools:layout="@layout/fragment_germany" />

    <fragment
        android:id="@+id/nav_spain"
        android:name="com.example.footbal2.fragments.SpainFragment"
        android:label="@string/menu_spain"
        tools:layout="@layout/fragment_spain" />

    <fragment
        android:id="@+id/nav_france"
        android:name="com.example.footbal2.fragments.FranceFragment"
        android:label="@string/menu_france"
        tools:layout="@layout/fragment_france" />

    <fragment
        android:id="@+id/nav_italy"
        android:name="com.example.footbal2.fragments.ItalyFragment"
        android:label="@string/menu_italy"
        tools:layout="@layout/fragment_italy" />
</navigation>