<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="50dp">

    <TextView
        android:id="@+id/points_title"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="5dp"
        android:gravity="center"
        android:text="@string/p"
        android:textColor="@color/green"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1.25"
        app:layout_constraintStart_toEndOf="@+id/played_games_title"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/played_games_title"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="5dp"
        android:gravity="center"
        android:text="@string/g"
        android:textColor="@color/green"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/points_title"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/lost_title"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/lost_title"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="5dp"
        android:gravity="center"
        android:text="@string/l"
        android:textColor="@color/green"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/played_games_title"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/draw_title"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/draw_title"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="5dp"
        android:gravity="center"
        android:text="@string/d"
        android:textColor="@color/green"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/lost_title"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/won_title"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/won_title"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="5dp"
        android:gravity="center"
        android:text="@string/w"
        android:textColor="@color/green"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/draw_title"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/form_title"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/form_title"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:text="@string/winstrike"
        android:textColor="@color/green"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/won_title"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintStart_toEndOf="@+id/emblem"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/emblem"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:text="@string/team"
        android:textColor="@color/green"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/form_title"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="9.75"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>